<resources>
    <string name="app_name">Blackwood</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="espere">Por favor, aguarda un momento.</string>
    <string name="validando_op">Estamos validando la operación.</string>
    <string name="pais_ph">País de origen</string>
    <string name="dom_ph">Domicilio legal</string>
    <string name="doc_ph">Documento</string>
    <string name="submit_f_doc">Subir documento (frente)</string>
    <string name="submit_d_doc">Subir documento (dorso)</string>
    <string name="enviar">Enviar para verificación</string>
    <string name="ver_info">Verificando información</string>
    <string name="ver_info_description">Estamos validando tus datos y documentación mediante nuestros procesos de verificación.</string>
    <string name="ver_info_info">Este proceso puede demorar unos minutos.\nTe notificaremos por correo electrónico cuando tu cuenta esté aprobada.</string>
    <string name="ver_info_estatus">Estado: En revisión</string>
    <string name="pass">Contraseña</string>
    <string name="conf_pass">Confirmar contraseña</string>
    <string name="medios_pago">Medios de pago</string>
    <string name="medios_pago_add">+ Agregar medio de pago</string>
    <string name="medios_pago_info">Tus medios de pago habilitan tu participación en subastas y pueden mejorar tu categoría.</string>
    <string name="final_reg">Finalizar registro</string>
    <string name="logo_title">BlackWood</string>
    <string name="logo_sub_title"><![CDATA[Finance & Sales]]></string>
    <string name="nuevo_metodo">Nuevo método</string>
    <string name="tipo_pago_ph">Seleccionar tipo de pago</string>
    <string name="cuenta_ph">Número de tarjeta / cuenta</string>
    <string name="tarjeta_ven">Vencimiento (MM/AA)</string>
    <string name="pais_org_ph">País de origen</string>
    <string name="medio_pago_info">Los medios de pago serán verificados por nuestro equipo antes de habilitar su uso en subastas.</string>
    <string name="guardar_mp">Guardar medio de pago</string>
    <string name="tipo_pago_title">Tipo de pago</string>
    <string name="detalle_metodo">**** 4587 · Internacional</string>
    <string name="tarj_credito">Tarjeta crédito</string>
    <string name="header_brand">Blackwood Fine Sales</string>
    <string name="registro">Registro</string>

    <!-- Layout Title/Text Strings -->
    <string name="loading_procesando">Procesando</string>
    <string name="luxury_auctions_subtitle">Luxury Auctions &amp; Fine Collections</string>
    <string name="datos_personales_title">Datos personales</string>
    <string name="registro_aprobado_title">Registro aprobado</string>
    <string name="seguridad_title">Seguridad</string>
    <string name="nombre_ph">Nombre</string>
    <string name="apellido_ph">Apellido</string>
    <string name="titular_ph">Titular</string>
    <string name="banco_ph">Banco</string>
    <string name="frente_capturado">Frente capturado</string>
    <string name="dorso_capturado">Dorso capturado</string>

    <!-- Register Validation & Messages -->
    <string name="error_nombre_obligatorio">El nombre es obligatorio</string>
    <string name="error_nombre_minimo">Mínimo 3 caracteres</string>
    <string name="error_apellido_obligatorio">El apellido es obligatorio</string>
    <string name="error_apellido_minimo">Mínimo 3 caracteres</string>
    <string name="error_pais_obligatorio">El país es obligatorio</string>
    <string name="error_pais_minimo">Mínimo 3 caracteres</string>
    <string name="error_domicilio_obligatorio">El domicilio es obligatorio</string>
    <string name="error_doc_obligatorio">El documento es obligatorio</string>
    <string name="error_doc_numeros">Solo se permiten números</string>
    <string name="error_doc_ocho_digitos">El documento debe tener exactamente 8 dígitos</string>
    <string name="error_tarjeta_dieciseis_digitos">El número de tarjeta debe tener exactamente 16 dígitos</string>
    <string name="error_vencimiento_formato">El vencimiento debe tener formato MM/AA</string>
    <string name="error_cvv_tres_digitos">El CVV debe tener exactamente 3 dígitos</string>
    <string name="pais_argentina">Argentina</string>
    <string name="pais_brasil">Brasil</string>
    <string name="pais_uruguay">Uruguay</string>
    <string name="pais_chile">Chile</string>
    <string name="pais_paraguay">Paraguay</string>
    <string name="pais_bolivia">Bolivia</string>
    <string name="pais_peru">Perú</string>
    <string name="pais_colombia">Colombia</string>
    <string name="pais_mexico">México</string>
    <string name="pais_espana">España</string>
    <string name="pais_estados_unidos">Estados Unidos</string>
    <string name="pais_alemania">Alemania</string>
    <string name="pais_francia">Francia</string>
    <string name="pais_italia">Italia</string>
    <string name="pais_reino_unido">Reino Unido</string>
    <string name="error_camara_permiso">Se necesita permiso de cámara.</string>
    <string name="error_camara_preparar">Error al preparar la cámara.</string>
    <string name="error_fotos_faltantes">Faltan fotos del documento</string>

    <!-- Register Step 2 & Payment Methods -->
    <string name="tipo_tarjeta_credito">Tarjeta de crédito</string>
    <string name="tipo_cuenta_bancaria">Cuenta bancaria</string>
    <string name="tipo_cheque_certificado">Cheque certificado</string>
    <string name="loading_finalizando_registro">Finalizando Registro</string>
    <string name="loading_creando_perfil">Estamos creando tu perfil de seguridad.</string>
    <string name="error_password_obligatorio">La contraseña es obligatoria</string>
    <string name="error_password_minimo">Mínimo 6 caracteres</string>
    <string name="error_confirm_password_obligatorio">Debes confirmar la contraseña</string>
    <string name="error_passwords_no_coinciden">Las contraseñas no coinciden</string>
    <string name="loading_verificando_medio">Verificando Medio</string>
    <string name="loading_vinculando_medio">Estamos vinculando tu %1$s</string>
    <string name="loading_info_pujas">Esto asegura la validez de tus futuras pujas.</string>
    <string name="detalle_vacio">Sin detalles proporcionados</string>
    <string name="btn_guardar_cambios">Guardar cambios</string>
    <string name="agregar_medio_pago">Agregar medio de pago</string>
    <string name="editar_medio_pago">Editar medio de pago</string>
    <string name="input_num_tarjeta">Número de tarjeta</string>
    <string name="input_vencimiento">Vencimiento MM/AA</string>
    <string name="input_cvv">CVV</string>
    <string name="input_num_cuenta">Número de cuenta</string>
    <string name="input_cbu">CBU / IBAN</string>
    <string name="input_banco_emisor">Banco emisor</string>
    <string name="input_num_cheque">Número de cheque</string>
    <string name="desc_logo">Logotipo de Blackwood</string>
    <string name="desc_editar">Editar</string>
    <string name="desc_eliminar">Eliminar</string>

    <!-- Login Activity -->
    <string name="login_brand_tagline">Subastas premium desde 1987</string>
    <string name="login_title">Iniciar sesión</string>
    <string name="login_subtitle">Ingresá con tu cuenta para acceder a las subastas</string>
    <string name="login_email_label">Correo electrónico</string>
    <string name="login_email_hint">usuario@ejemplo.com</string>
    <string name="login_password_label">Contraseña</string>
    <string name="login_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_btn_ingresar">Ingresar</string>
    <string name="login_separator">o</string>
    <string name="login_btn_crear_cuenta">Crear cuenta nueva</string>
    <string name="login_legal_text">Al continuar, aceptás nuestros Términos y condiciones</string>
    <string name="error_email_invalido">Ingresá una dirección válida</string>
</resources>